# hyperbot

./: README.md  dev_memo.md  pyproject.toml  requirements.txt
.agent/: 2026-05-30-historical-prices-backtest.md  2026-05-30-phase1-market-data.md
config/: mainnet.yaml  testnet.yaml
scripts/: fetch_history.py  run_grid_backtest.py  run_testnet.py  watch_testnet_ws.py
src/hyperbot/: __init__.py  config.py  grid_backtest.py  historical_prices.py  market_data.py  ws.py
tests/: test_config.py  test_grid_backtest.py  test_historical_prices.py  test_market_data.py  test_websocket.py
