[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperbot"
version = "0.1.0"
description = "Read-only Hyperliquid market data foundation for a grid bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperliquid-python-sdk==0.23.0",
    "PyYAML>=6.0.3,<7",
    "websocket-client>=1.9.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
